--- a/module-2/lab-hypothesis-testing/your-code/bonus.ipynb
+++ b/module-2/lab-hypothesis-testing/your-code/bonus.ipynb
@@ -19,14 +19,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import libraries\n",
     "\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from scipy.stats import *"
    ]
   },
   {
@@ -40,9 +41,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Type 1</th>\n",
+       "      <th>Type 2</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <th>Speed</th>\n",
+       "      <th>Generation</th>\n",
+       "      <th>Legendary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Bulbasaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>318</td>\n",
+       "      <td>45</td>\n",
+       "      <td>49</td>\n",
+       "      <td>49</td>\n",
+       "      <td>65</td>\n",
+       "      <td>65</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Ivysaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>405</td>\n",
+       "      <td>60</td>\n",
+       "      <td>62</td>\n",
+       "      <td>63</td>\n",
+       "      <td>80</td>\n",
+       "      <td>80</td>\n",
+       "      <td>60</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Venusaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>525</td>\n",
+       "      <td>80</td>\n",
+       "      <td>82</td>\n",
+       "      <td>83</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>VenusaurMega Venusaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>625</td>\n",
+       "      <td>80</td>\n",
+       "      <td>100</td>\n",
+       "      <td>123</td>\n",
+       "      <td>122</td>\n",
+       "      <td>120</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Charmander</td>\n",
+       "      <td>Fire</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>309</td>\n",
+       "      <td>39</td>\n",
+       "      <td>52</td>\n",
+       "      <td>43</td>\n",
+       "      <td>60</td>\n",
+       "      <td>50</td>\n",
+       "      <td>65</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   #                   Name Type 1  Type 2  Total  HP  Attack  Defense  \\\n",
+       "0  1              Bulbasaur  Grass  Poison    318  45      49       49   \n",
+       "1  2                Ivysaur  Grass  Poison    405  60      62       63   \n",
+       "2  3               Venusaur  Grass  Poison    525  80      82       83   \n",
+       "3  3  VenusaurMega Venusaur  Grass  Poison    625  80     100      123   \n",
+       "4  4             Charmander   Fire     NaN    309  39      52       43   \n",
+       "\n",
+       "   Sp. Atk  Sp. Def  Speed  Generation  Legendary  \n",
+       "0       65       65     45           1      False  \n",
+       "1       80       80     60           1      False  \n",
+       "2      100      100     80           1      False  \n",
+       "3      122      120     80           1      False  \n",
+       "4       60       50     65           1      False  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Import dataset\n",
     "\n",
@@ -64,11 +207,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def t_test_features(s1, s2, features=['HP', 'Attack', 'Defense', 'Sp. Atk', 'Sp. Def', 'Speed', 'Total']):\n",
+    "    \n",
     "    \"\"\"Test means of a feature set of two samples\n",
     "    \n",
     "    Args:\n",
@@ -82,8 +226,9 @@
     "    results = {}\n",
     "\n",
     "    # Your code here\n",
-    "    \n",
-    "    return results"
+    "    for i in features:\n",
+    "        results[i]= ttest_ind(s1[i],s2[i]).pvalue/2\n",
+    "    return results\n"
    ]
   },
   {
@@ -107,11 +252,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'HP': 1.6653238424230954e-15,\n",
+       " 'Attack': 3.913626501602666e-24,\n",
+       " 'Defense': 7.921113047213627e-13,\n",
+       " 'Sp. Atk': 3.157457885213633e-41,\n",
+       " 'Sp. Def': 9.219904790204666e-27,\n",
+       " 'Speed': 1.1770377218448882e-21,\n",
+       " 'Total': 1.5476228734826412e-52}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "t_test_features(pokemon[pokemon['Legendary']==False],pokemon[pokemon['Legendary']==True])"
    ]
   },
   {
@@ -123,11 +286,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your comment here"
+    "# Your comment here\n",
+    "# Se rechaza la hipótesis nula para todos los features, por lo que la diferencia entre ambas clases es significativa."
    ]
   },
   {
@@ -139,11 +303,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'HP': 0.06895940706406811,\n",
+       " 'Attack': 0.12025484209050728,\n",
+       " 'Defense': 0.2703815174597181,\n",
+       " 'Sp. Atk': 0.0705989408816575,\n",
+       " 'Sp. Def': 0.08390613115803193,\n",
+       " 'Speed': 0.0014178477406289352,\n",
+       " 'Total': 0.279957032450722}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "t_test_features(pokemon[pokemon['Generation']==1],pokemon[pokemon['Generation']==2])"
    ]
   },
   {
@@ -159,7 +341,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your comment here"
+    "# Your comment here\n",
+    "# Se rechazaría la hipótesis nula en la velocidad, campo en el que son diferentes los pokemon de primera\n",
+    "# y segunda generación. El Sp. Atk y Sp. Def se rechazarían pero no con un nivel de confianza tan alto."
    ]
   },
   {
@@ -171,11 +355,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'HP': 0.055303215722159266,\n",
+       " 'Attack': 7.870697833082198e-05,\n",
+       " 'Defense': 1.625297102878502e-08,\n",
+       " 'Sp. Atk': 7.274587020175735e-05,\n",
+       " 'Sp. Def': 5.446652397767198e-05,\n",
+       " 'Speed': 0.012025705397018732,\n",
+       " 'Total': 5.874517504414334e-08}"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "t_test_features(pokemon[pokemon['Type 2'].isnull()],pokemon[pokemon['Type 2'].notnull()])"
    ]
   },
   {
@@ -187,11 +389,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your comment here"
+    "# Your comment here\n",
+    "# Se rechazaría la hipótesis nula en la todas las features excepto en HP con un nivel alto de confianza,\n",
+    "# HP se rechazaría pero con un nivel menor de confianza, puesto que el p-valor se encuentra entre 0,05 y 0,10."
    ]
   },
   {
@@ -205,11 +409,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Attack vs Defense: 8.570151739679279e-06\n",
+      "Sp. Atk vs Sp. Def: 0.1966842998774061\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "def t_test_features_re(s1, s2):\n",
+    "    \n",
+    "    \"\"\"Test means of a feature set of two samples\n",
+    "    \n",
+    "    Args:\n",
+    "        s1 (dataframe): sample 1\n",
+    "        s2 (dataframe): sample 2\n",
+    "        features (list): an array of features to test\n",
+    "    \n",
+    "    Returns:\n",
+    "        dict: a dictionary of t-test scores for each feature where the feature name is the key and the p-value is the value\n",
+    "    \"\"\"\n",
+    "    results = {}\n",
+    "\n",
+    "    # Your code here\n",
+    "\n",
+    "    return ttest_rel(s1,s2).pvalue/2\n",
+    "print('Attack vs Defense:',t_test_features_re(pokemon['Attack'],pokemon['Defense']))\n",
+    "print('Sp. Atk vs Sp. Def:',t_test_features_re(pokemon['Sp. Atk'],pokemon['Sp. Def']))"
    ]
   },
   {
@@ -225,7 +457,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your comment here"
+    "# Your comment here\n",
+    "# En el caso de ataque vs defensa se rechaza la hipótesis nula, por lo que la diferencia entre ambas features es significativa\n",
+    "# En el caso de vel ataque vs vel defensa, al contrario que la anterior, no se rechaza la hipótesis nula\n",
+    "# al ser un p-valor de 0.19"
    ]
   }
  ],
