--- a/module-2/lab-hypothesis-testing/your-code/main.ipynb
+++ b/module-2/lab-hypothesis-testing/your-code/main.ipynb
@@ -623,29 +623,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Hourly Rate    32.788558\n",
-       "dtype: float64"
+       "32.78855771628024"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mean = hourly_wage.mean()\n",
+    "mean = hourly_wage['Hourly Rate'].mean()\n",
     "mean"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +653,7 @@
        "0.1352368565101596"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,18 +665,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'm' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-134-257c2f731e8d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mmean_confidence_interval\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhourly_wage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconfidence\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.95\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'The confidence interval of the hourly wage is {} - {} and the mean is {}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mh\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mh\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'm' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The confidence interval of the hourly wage is 32.52 - 33.05 and the mean is 32.79\n"
      ]
     }
    ],
@@ -687,8 +682,11 @@
     "    h = se * t.ppf((1 + confidence) / 2., degrees_of_freedom)\n",
     "    return m, m-h, m+h\n",
     "\n",
-    "print(mean_confidence_interval(hourly_wage, confidence=0.95))\n",
-    "print('The confidence interval of the hourly wage is {} - {} and the mean is {}'.format(m-h,m+h,m))"
+    "result = mean_confidence_interval(hourly_wage, confidence=0.95)\n",
+    "\n",
+    "print(\"The confidence interval of the hourly wage is {} - {} and the mean is {}\".format(round(result[1],2),\n",
+    "                                                                                        round(result[2],2),\n",
+    "                                                                                        round(result[0],2)))"
    ]
   },
   {
@@ -700,11 +698,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 163,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     101442.0\n",
+       "1      94122.0\n",
+       "9      93354.0\n",
+       "11     84054.0\n",
+       "12     87006.0\n",
+       "Name: Annual Salary, dtype: float64"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "salaried_police = salaries[salaries['Department'] == 'POLICE']['Annual Salary'].dropna(axis=0)\n",
+    "salaried_police.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13403"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "degrees_of_freedom_sp = len(salaried_police) - 1\n",
+    "degrees_of_freedom_sp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "86486.41450313339"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_sp = salaried_police.mean()\n",
+    "mean_sp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "157.82445675052244"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "standard_error_sp = stats.sem(salaried_police, axis=None)\n",
+    "standard_error_sp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The confidence interval of the salaried employeed in the police is 86177.06 - 86795.77 and the mean is 86486.41\n"
+     ]
+    }
+   ],
+   "source": [
+    "def mean_confidence_interval(salaried_police, confidence=0.95):\n",
+    "    m_sp, se_sp = mean_sp, standard_error_sp\n",
+    "    h_sp = se_sp * t.ppf((1 + confidence) / 2., degrees_of_freedom_sp)\n",
+    "    return m_sp, m_sp-h_sp, m_sp+h_sp\n",
+    "\n",
+    "result_sp = mean_confidence_interval(salaried_police, confidence=0.95)\n",
+    "\n",
+    "print(\"The confidence interval of the salaried employeed in the police is {} - {} and the mean is {}\".\n",
+    "format(round(result_sp[1],2),\n",
+    "round(result_sp[2],2),\n",
+    "round(result_sp[0],2)))"
    ]
   },
   {
