--- a/module-2/lab-probability-distribution/your_code/main.ipynb
+++ b/module-2/lab-probability-distribution/your_code/main.ipynb
@@ -12,11 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import your libraries\n"
+    "# Import your libraries\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -70,6 +72,8 @@
    "source": [
     "# Your code here\n",
     "mu, sigma = 50, 5\n",
+    "# mu como la media de nuestro contraste de hipótesis\n",
+    "# sigma \n",
     "\n",
     "sample_size = pd.Series([10, 50, 500, 5000, 50000])\n",
     "\n",
@@ -399,7 +403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
